@@ -5,6 +5,9 @@ NZBLeecher:
 o Fixed a bug causing the downloader to break and the scroller to scroll
   excessive lines, after a certain situation where hellanzb was paused twice
 
+o Correctly handling NZB files with out of order segments, previously this
+  could cause corruption (thanks spinez)
+
 
 v0.7:
 
